--- a/css/custom.css
+++ b/css/custom.css
@@ -33,7 +33,7 @@ nav{
 }
 nav a{
     text-align: center;
-    color: black;
+    color: white;
     font-size: 16pt;
     font-family: Papyrus;
     height: 100%;
