--- a/css/custom.css
+++ b/css/custom.css
@@ -53,7 +53,7 @@ nav a{
 nav a:first-child{
     border-left: none;
 }
-#portfolio nav a:first-child{
+#portfolio nav a:first-child, #contact nav a:first-child{
     border-left: solid thin black;
 }
 nav a:hover{
